DesignProject/tests/error/test04_error.src
func multiply(a : int, b : int) -> int {
    return(a * b);
}

func test() -> int {
    local x : int;
    x := multiply(5);
    return(x);
}

